--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.3",
-    "autoprefixer": "^9.8.6",
+    "@toast-ui/vue-editor": "^2.5.1",
     "core-js": "^3.6.5",
     "date-fns": "^2.17.0",
     "firebase": "^8.2.7",
-    "postcss": "^7.0.35",
-    "simplemde": "^1.11.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
+    "highlight.js": "^10.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-showdown": "^3.0.0",
     "vue-simplemde": "^2.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   }
 }
